--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "jest",
+    "test": "happiness && jest",
     "watch": "jest --watchAll"
   },
   "author": "Juergen Fitschen <me@jue.yt>",
