--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
       "describe",
       "test",
       "expect",
-      "beforeEach"
+      "beforeEach",
+      "afterEach"
     ]
   },
   "jest": {
