--- a/animations/__tests__/GameFrame.data.moveimgx/config.ini
+++ b/animations/__tests__/GameFrame.data.moveimgx/config.ini
@@ -1,18 +1,18 @@
 # All of these settings are optional.
 # If this file doesn't exist, or if
-# settings don't appear in this file, 
+# settings don't appear in this file,
 # Game Frame will use default values.
 
 [animation]
 
-# milliseconds to hold each frame 
+# milliseconds to hold each frame
 # (1000 = 1 sec; lower is faster)
 hold = 200
 
 # should the animation loop? If false,
 # system will progress to next folder
 # after the last frame is displayed.
-loop = true
+loop = false
 
 [translate]
 
